LDAP and database variables passed as container parameters